# fartlek

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  LICENSE  README.md  ROADMAP.md  pyproject.toml  server.json
.cursor/: mcp.json
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  EVAL.md  HANDOFF.md  PHASE2.md
fartlek/: cli.py  paths.py
fartlek/analytics/: alerts.py  attribution.py  baselines.py  convergence.py  efficiency.py  fusion.py  load.py  matcher.py  pmc.py  precedent.py  projection.py  race.py  sleep.py  tid.py  trends.py
fartlek/health/: ports.py  service.py
fartlek/health/adapters/: garmin_connect.py
fartlek/mcp_server/: context.py  prompts.py  server.py
fartlek/mcp_server/tools/: __init__.py  _zones.py  activities.py  activity.py  athlete.py  brief.py  fitness.py  load.py  log_tool.py  raw.py  recovery.py  reference.py  set_profile.py  sync_tool.py  week.py  whats_changed.py
fartlek/render/: renderer.py
fartlek/store/: __init__.py  schema.sql  store.py
fartlek/sync/: engine.py
src/: config.py  dependencies.py  login.py  main.py
src/coaching/: api.py  domain.py  exceptions.py  ports.py  schemas.py  service.py
src/coaching/adapters/: anthropic_llm.py
src/coaching/adapters/tools/: health_tools.py  registry.py
src/health/: domain.py  exceptions.py  service.py
src/health/adapters/: garmin_connect.py  garmin_garth.py
src/mcp_server/: server.py
static/: index.html
tests/: conftest.py  golden_renders.py  test_alerts.py  test_attribution.py  test_attribution_language.py  test_baselines.py  test_budget_gate.py  test_cli.py  test_context.py  test_convergence.py  test_efficiency.py  test_fusion.py  test_guardrails.py  test_load.py  test_matcher.py  test_pmc.py  test_precedent.py  test_projection.py  test_prompts.py  test_race.py  test_renderer.py  test_sleep.py  test_splits.py  test_store.py  test_sync.py  test_tid.py  test_tool_activities.py  test_tool_activity.py  test_tool_athlete.py  test_tool_brief.py  test_tool_fitness.py  test_tool_load.py  test_tool_raw.py  test_tool_recovery.py  test_tool_reference.py  test_tool_week.py  test_tool_whats_changed.py  test_tool_writes.py  test_trends.py
