[project]
name = "ai-coach"
version = "0.1.0"
description = "AI coaching assistant with Garmin integration and Claude tool use"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "mcp[cli]>=1.27.1",
    "garminconnect>=0.3.6",
]

[project.scripts]
ai-coach-mcp = "src.mcp_server.server:main"
ai-coach-login = "src.login:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
