[project]
name = "fartlek-mcp"
version = "0.1.0.dev0"
description = "Fartlek — a coach's morning report from your Garmin data, for any LLM via MCP"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["garmin", "mcp", "coaching", "running", "training", "llm"]
dependencies = [
    "garminconnect>=0.3.6",
    "mcp[cli]>=1.27.1",
]

[project.scripts]
fartlek = "fartlek.cli:main"
fartlek-mcp = "fartlek.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fartlek"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
