[project]
name = "fartlek-mcp"
version = "0.2.1"
description = "Fartlek — a coach's morning report from your Garmin data, for any LLM via MCP"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["garmin", "mcp", "coaching", "running", "training", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Utilities",
]
authors = [
    {name = "Fartlek contributors"},
]

dependencies = [
    "garminconnect>=0.3.6",
    "mcp[cli]>=1.27.1",
]

[project.scripts]
fartlek = "fartlek.cli:main"
fartlek-mcp = "fartlek.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/matisdsp/fartlek"
Repository = "https://github.com/matisdsp/fartlek"
Documentation = "https://github.com/matisdsp/fartlek/blob/main/docs/DESIGN.md"
Issues = "https://github.com/matisdsp/fartlek/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fartlek"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "tiktoken>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
